# aoc_2023_rs

./: .gitignore  Cargo.toml  readme.md
day-01/: Cargo.toml
day-01/benches/: benchmarks.rs
day-01/src/: lib.rs  main.rs
day-02/src/: main.rs
day-03/src/: main.rs
day-04/src/: main.rs
day-05/src/: main.rs
day-06/src/: main.rs
day-07/src/: main.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks.rs  solution_benchmarks.rs
day-08/src/: lib.rs  main.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks.rs
day-09/src/: lib.rs  main.rs
template/: Cargo.toml
template/benches/: benchmarks.rs  solution_benchmarks.rs
template/src/: lib.rs  main.rs
