[package]
name = "day-08"
version = "0.1.0"
edition = "2021"

[lib]
name = "solutions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lcmx = "0.1.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "solution_benchmark"
harness = false
